Add process to 17/4

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<title>Trang chủ</title>
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 	<link rel="stylesheet" type="text/css" href="./css/header.css">
+	<link rel="stylesheet" type="text/css" href="./css/body.css">
 </head>
 <body>
 	<div class="header">
 		<div class="header__head">
-			<div class="component__main">
+			<div class="component__header">
 				<div class="header__logo"><a href="index.html"><div id="header__logo"></div></a></div>
 				<div class="header__search">
 					<form method="get">
@@ -22,16 +23,43 @@
 			</div>
 		</div>
 		<div class="header__menu">
-			<div class="component__main">
-				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fas fa-laptop"></i> Laptop</a></div>
+			<div class="component__header">
+				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fas fa-laptop"></i> Tất cả Laptop</a></div>
 				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fab fa-apple"></i> MacOS</a></div>
 				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fab fa-windows"></i> Windows</a></div>	
-				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fas fa-info"></i> Thông tin với chúng tôi</a></div>
+				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fas fa-info"></i> Thông tin cho chúng tôi</a></div>
 			</div>
 		</div>
 	</div>
 	<div class="main">
-		<div class="body"></div>
+		<div class="main__distance1"></div>
+		<div class="main__slideshow">Slide Show</div>
+		<div class="main__distance"></div>
+		<div class="component__main">
+			<div class="main__title">THƯƠNG HIỆU LAPTOP</div>
+			<div class="main__laptop">
+				<div class="main__laptop-component">
+					<a href="#"><div class="laptop__component apple"></div></a>
+					<div><label>Apple (Macbook)</label></div>
+				</div>
+				<div class="main__laptop-component">
+					<a href="#"><div class="laptop__component dell"></div></a>
+					<div><label>Dell</label></div>
+				</div>
+				<div class="main__laptop-component">
+					<a href="#"><div class="laptop__component lenovo"></div></a>
+					<div><label>Lenovo</label></div>
+				</div>
+				<div class="main__laptop-component">
+					<a href="#"><div class="laptop__component asus"></div></a>
+					<div><label>Asus</label></div>
+				</div>
+				<div class="main__laptop-component">
+					<a href="#"><div class="laptop__component hp"></div></a>
+					<div><label>HP</label></div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="footer"></div>
 
