Replace all project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 	<link rel="stylesheet" type="text/css" href="./css/header.css">
 	<link rel="stylesheet" type="text/css" href="./css/body.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div class="header">
@@ -16,18 +17,18 @@
 				<div class="header__search">
 					<form method="get">
 						<input type="text" name="txtSearch" placeholder="Nhập tên máy tính cần tìm" maxlength="50" class="header__search-input">
-						<button type="submit" class="button button-search"><i class="fas fa-search"></i></button>
+						<button type="submit" class="button button-search"><i class="fa fa-search"></i></button>
 					</form>
 				</div>
-				<div ><button class="shopping-cart button"><i class="fas fa-shopping-cart fa-2x"></i></button></div>
+				<div ><button class="shopping-cart button"><i class="fa fa-shopping-cart fa-2x"></i></button></div>
 			</div>
 		</div>
 		<div class="header__menu">
 			<div class="component__header">
-				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fas fa-laptop"></i> Tất cả Laptop</a></div>
-				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fab fa-apple"></i> MacOS</a></div>
-				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fab fa-windows"></i> Windows</a></div>	
-				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fas fa-info"></i> Thông tin cho chúng tôi</a></div>
+				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fa fa-laptop"></i> Tất cả Laptop</a></div>
+				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fa fa-apple"></i> MacOS</a></div>
+				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fa fa-windows"></i> Windows</a></div>	
+				<div class="header__laptop"><a href="https://www.facebook.com/dnam.2507" target="_blank" class="link__laptop"><i class="fa fa-info"></i> Thông tin cho chúng tôi</a></div>
 			</div>
 		</div>
 	</div>
@@ -60,9 +61,11 @@
 				</div>
 			</div>
 		</div>
+		<div class="main__distance"></div>
+		<div class="main__star">
+			
+		</div>
 	</div>
 	<div class="footer"></div>
-
-	<script src="https://kit.fontawesome.com/c373eb3e2c.js" crossorigin="anonymous"></script>
 </body>
 </html>
