--- a/index.html
+++ b/index.html
@@ -25,9 +25,36 @@
 		</div>
 		<div class="header__menu">
 			<div class="component__header">
-				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fa fa-laptop"></i> Tất cả Laptop</a></div>
+				<div class="header__laptop">
+					<a href="#" class="link__laptop"><i class="fa fa-laptop"></i>
+						<ul class="sub__menu">
+							<li class="sub__menu-element">
+								<a href="#" class="link__laptop"><i class="fa fa-apple"></i> MacOS</a>
+							</li>
+							<li class="sub__menu-element">
+								<a href="#" class="link__laptop link__sub2"><i class="fa fa-windows"></i> Windows
+									<ul class="sub2__menu">
+										<li class="sub__menu-element"><a href="#" class="link__laptop">Dell</a></li>
+										<li class="sub__menu-element"><a href="#" class="link__laptop">Asus</a></li>
+										<li class="sub__menu-element"><a href="#" class="link__laptop">Lenovo</a></li>
+										<li class="sub__menu-element"><a href="#" class="link__laptop">HP</a></li>
+									</ul>
+								</a>
+							</li>
+						</ul>
+					</a>
+				</div>
 				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fa fa-apple"></i> MacOS</a></div>
-				<div class="header__laptop"><a href="#" class="link__laptop"><i class="fa fa-windows"></i> Windows</a></div>	
+				<div class="header__laptop">
+					<a href="#" class="link__laptop"><i class="fa fa-windows"></i> Windows
+						<ul class="sub__menu" style="text-align: center;">
+							<li class="sub__menu-element"><a href="#" class="link__laptop">Dell</a></li>
+							<li class="sub__menu-element"><a href="#" class="link__laptop">Asus</a></li>
+							<li class="sub__menu-element"><a href="#" class="link__laptop">Lenovo</a></li>
+							<li class="sub__menu-element"><a href="#" class="link__laptop">HP</a></li>
+						</ul>
+					</a>
+				</div>	
 				<div class="header__laptop"><a href="https://www.facebook.com/dnam.2507" target="_blank" class="link__laptop"><i class="fa fa-info"></i> Thông tin cho chúng tôi</a></div>
 			</div>
 		</div>
