--- a/index.html
+++ b/index.html
@@ -117,6 +117,51 @@
 			
 		</div>
 	</div>
+	<div class="footer">
+		<div class="inner-footer">
+			<div class="footer-logo">
+				<a href="index.html"><div id="footer-logo"></div></a>
+			</div>
+		
+			<div class="footer-items">
+				<div class="footer-title">LION KING </div>
+				<div class="border"></div>
+				<div class="footer-content">
+					Mua laptop LION KING<br>giá rẻ số 1, chất lượng số 1.<br>Hãy đến với chúng tôi,<br>để trải nghiệm những điều tuyệt vời nhất.
+				</div>
+			</div>
+			<div class="footer-items">
+				<div class="footer-title">Truy Cập Nhanh</div>
+				<div class="border"></div>
+				<div class="footer-icon">
+					<div class="footer-icon1"><a href="#">Trang chủ </a></div>
+					<div class="footer-icon1"><a href="#">Sản phẩm </a></div>
+					<div class="footer-icon1"><a href="#">Dịch vụ </a></div>
+					<div class="footer-icon1"><a href="#">Liên hệ </a></div> 
+				</div>
+			</div>
+
+			<div class="footer-items">
+				<div class="footer-title">Liên Hệ</div>
+				<div class="border"></div>
+				<div class="footer-icon">
+					<div class="footer-icon2"><i class="fa fa-map-marker" aria-hidden='true'></i>  144, Xuân Thủy, Cầu Giấy, Hà Nội </div>
+					<div class="footer-icon2"><i class="fa fa-phone" aria-hidden='true'></i>  Phone </div>
+					<div class="footer-icon2"><i class="fa fa-envelope" aria-hidden='true'></i>  abc@gmail.com </div>
+				</div>
+				<div class="social-media">
+					<a href="#"><i class="fa fa-facebook" aria-hidden='true'></i></a>
+					<a href="#"><i class="fa fa-instagram" aria-hidden='true'></i></a>
+					<a href="#"><i class="fa fa-twitter" aria-hidden='true'></i></a>
+					<a href="#"><i class="fa fa-google-plus" aria-hidden='true'></i></a>
+				</div>
+			</div>
+
+		</div>
+		<div class="footer-bottom">
+			Copyright by &copy; LION KING
+		</div>
+	</div>
  	
  	<script type="text/javascript" src="./js/header.js"></script>
 	<script type="text/javascript" src="./js/body.js"></script>
