--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 						<button type="submit" class="button button-search"><i class="fa fa-search"></i></button>
 					</form>
 				</div>
+				<div class="customer">
+					<a href="login.html">Sign in</a>/<a href="login.html">Sign up</a>
+				</div>
 				<div ><button class="shopping-cart button"><i class="fa fa-shopping-cart fa-2x"></i></button></div>
 			</div>
 		</div>
