Add sub website

--- a/apple.html
+++ b/apple.html
@@ -62,32 +62,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="main">
+		<div class="submain">
 		<div class="main__distance1"></div>
-		<div class="main__slideshow">
-			<div class="main__slideshow-element">
-				<a href="index.html" class="link__slide fade"><img src="./css/image/SlideShow/slide_1.jpg"></a>
-			</div>
-			<div class="main__slideshow-element">
-				<a href="index.html" class="link__slide fade"><img src="./css/image/SlideShow/slide_2.jpg"></a>
-			</div>
-			<div class="main__slideshow-element">
-				<a href="index.html" class="link__slide fade"><img src="./css/image/SlideShow/slide_3.jpg"></a>
-			</div>
-			<div class="main__slideshow-element">
-				<a href="index.html" class="link__slide fade"><img src="./css/image/SlideShow/slide_4.jpg"></a>
-			</div>
-			<button class="prev" onclick="plusSlides(-1)"><i class="fa fa-arrow-left"></i></button>
-			<button class="next" onclick="plusSlides(1)"><i class="fa fa-arrow-right"></i></button>
-			<div class="main__slideshow-dots">
-				<span class="dot" onclick="currentSlide(1)"></span>
-				<span class="dot" onclick="currentSlide(2)"></span>
-				<span class="dot" onclick="currentSlide(3)"></span>
-				<span class="dot" onclick="currentSlide(4)"></span>
-			</div>
-		</div>
-		<div class="main__distance"></div>
-		<div class="main__distance"></div>
 		<div class="component__main">
 			<div class="main__title">THƯƠNG HIỆU LAPTOP</div>
 			<div class="main__laptop">
@@ -239,8 +215,136 @@
 					</div>
 				</div>
 			</div>
+		</div>
+			<div class="main__distance"></div>
+			<div class="main__star">
+			<div class="product product-1">
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
+				<div class="product-price">6.990.000đ</div>
+				<div class="product-description">
+					<ul class="product-stat">
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+						</div>
+					</ul>
+					<br>
+					<div class="product-purchase">
+						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
+					</div>
+				</div>
+			</div>
+			<div class="product product-1">
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
+				<div class="product-price">6.990.000đ</div>
+				<div class="product-description">
+					<ul class="product-stat">
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+						</div>
+					</ul>
+					<br>
+					<div class="product-purchase">
+						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
+					</div>
+				</div>
+			</div>
+			<div class="product product-1">
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
+				<div class="product-price">6.990.000đ</div>
+				<div class="product-description">
+					<ul class="product-stat">
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+						</div>
+					</ul>
+					<br>
+					<div class="product-purchase">
+						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
+					</div>
+				</div>
+			</div>
+			<div class="product product-1">
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
+				<div class="product-price">6.990.000đ</div>
+				<div class="product-description">
+					<ul class="product-stat">
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+						</div>
+					</ul>
+					<br>
+					<div class="product-purchase">
+						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
+					</div>
+				</div>
+			</div>
 	</div>
 	</div>
+	<div class="main__distance"></div>
 	<div class="main__distance"></div>
 	<div class="footer">
 		<div class="inner-footer">
