--- a/asus.html
+++ b/asus.html
@@ -23,7 +23,7 @@
 						<button type="submit" class="button button-search"><i class="fa fa-search"></i></button>
 					</form>
 				</div>
-				<div ><button class="shopping-cart button"><i class="fa fa-shopping-cart fa-2x"></i></button></div>
+				<div><a href="./shopping.html"><button class="button" id="shopping-cart"><i class="fa fa-shopping-cart fa-2x"></i></button></a></div>
 			</div>
 		</div>
 		<div class="header__menu">
