Shopping form and success form

--- a/success.html
+++ b/success.html
@@ -62,30 +62,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="main main__form">
-		<div class="shopping__tittle">
-			<h2>Giỏ hàng của bạn</h2>
-		</div>
-		<div class="shopping__form">
-			<form id="shopping__form" method="get" action="success.html" onsubmit="return checkSubmit()">
-				<div class="shopping__form-component">
-					<label class="shopping__form-label">Họ và tên</label>
-					<input type="text" name="txtName" id="txtName">
-				</div>
-				<div class="shopping__form-component">
-					<label class="shopping__form-label">Số điện thoại <span>(*)</span></label>
-					<input type="text" name="txtPhone" id="txtPhone">
-				</div>
-				<div class="shopping__form-component">
-					<label class="shopping__form-label">Địa chỉ:</label>
-					<input type="text" name="txtPosition" id="txtPosition">
-				</div>
-				<div>
-					<input type="submit" name="btnSubmit" value="Mua hàng" >
-					<button id="cancel">Hủy mua</button>
-				</div>
-			</form>
-		</div>
+	<div class="main">
+		<div class="submit__success">Chúc mừng bạn mua hàng thành công.<br> <a href="index.html">Quay lại trang chủ</a> </div>
 	</div>
 	<div class="main__distance"></div>
 	<div class="footer">
@@ -133,9 +111,5 @@
 			Copyright by &copy; LION KING
 		</div>
 	</div>
- 	
- 	<script type="text/javascript" src="./js/header.js"></script>
-	<script type="text/javascript" src="./js/body.js"></script>
-	<script type="text/javascript" src="./js/handleForm.js"></script>
 </body>
 </html>
