--- a/success.html
+++ b/success.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/header.css">
 	<link rel="stylesheet" type="text/css" href="./css/body.css">
 	<link rel="stylesheet" type="text/css" href="./css/footer.css">
+	<link rel="stylesheet" type="text/css" href="./css/form.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/componentLaptop.css">
 </head>
@@ -63,7 +64,7 @@
 		</div>
 	</div>
 	<div class="main">
-		<div class="submit__success">Chúc mừng bạn mua hàng thành công.<br> <a href="index.html">Quay lại trang chủ</a> </div>
+		<div class="submit__success"><div class="congratulation">Chúc mừng bạn mua hàng thành công.</div><a class="return" href="index.html">Quay lại trang chủ</a> </div>
 	</div>
 	<div class="main__distance"></div>
 	<div class="footer">
